<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Magazoo - Shops near you</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gas_mag">GasMag</string>
    <string name="title_activity_pagina_harta">PaginaHarta</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>

    <color name="bg_color">#ffffff</color>

    <string-array name="tipuri_mag">
        <item>...alege tip</item>
        <item>de cartier</item>
        <item>supermarket</item>
        <item>hipermarket</item>
        <item>piata</item>
        <item>benzinarie</item>
    </string-array>

    <string name="app_id">1623197661237731</string>
    <string name="filtru_toate_mag">Showing all shops</string>
    <string name="filtru_ns_card">Showing 24/7 with POS</string>
    <string name="filtru_pos">Showing all with POS</string>
    <string name="filtru_ns">Showing all 24/7</string>
    <string name="filtru_none">Please apply a filter</string>
    <string name="title_waiting_location">Waiting for location</string>
    <string name="text_waiting_location">Finding your location. Please be patient</string>
    <string name="internet_down_title">No internet, buddy!</string>
    <string name="internet_down">I need internet to show you shops. Enable it now?</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>
    <string name="gps_down">I need GPS to show you shops. Enable it now?</string>
    <string name="title_loading_shops">Loading shops</string>
    <string name="text_loading_shops">Loading all shops near you</string>
    <string name="back_exit">Please click BACK again to exit</string>
    <string name="splash_te_servim">Today we have</string>
    <string name="splash_magazine">shops near you</string>
    <string name="loading_DM">Loading shop details</string>
    <string name="info_windows_touch">Touch for details</string>
    <string name="show_filters">Show filters</string>
    <string name="hide_filters">Hide filters</string>
    <string name="chkToate">All</string>
    <string name="chkNonstop">24/7</string>
    <string name="chkPOS">POS</string>
    <string name="btnArata">Show</string>
    <string name="btnNavigation">Navigation</string>
    <string name="DMType">Type: </string>
    <string name="DMPos">POS: </string>
    <string name="DMLV">Monday-Friday: </string>
    <string name="DMSaturday">Saturday: </string>
    <string name="DMSunday">Sunday: </string>
    <string name="DMsepopuleaza">Loading...</string>
    <string name="slider">Filtru</string>
    <string name="add_me">Add me!</string>
    
    
    

    <!-- add shop screen -->
    <string name="add_navbar_text">Add Shop</string>
    <string name="shop_name">Shop name</string>
    <string name="name_missing">Please enter shop name</string>
    <string name="start_hint">de ex: 09:00</string>
    <string name="end_hint">de ex: 22:00</string>
    <string name="shop_desc">Additional info</string>
    <string name="shop_add">Add</string>
    
    <string name="cancel_add_title">Cancel</string>
    <string name="cancel_add">Are you sure you want to cancel?</string>
    

</resources>