<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlNavBar"
        android:background="@drawable/vezi_mag"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"></RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/rl_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">

                <LinearLayout
                    android:id="@+id/llL2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/linearLayout1"
                    android:layout_toRightOf="@+id/llL1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTipDM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="..."
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/tvPOSDM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="..." />

                    <TextView
                        android:id="@+id/tvLVDM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="..." />

                    <TextView
                        android:id="@+id/tvSambataDM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="..." />

                    <TextView
                        android:id="@+id/tvDuminicaDM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="..." />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llL1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/linearLayout1"
                    android:layout_alignTop="@+id/llL2"
                    android:layout_marginRight="42dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTipstatic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DMType" />

                    <TextView
                        android:id="@+id/tvPOSstatic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DMPos" />

                    <TextView
                        android:id="@+id/tvLVstatic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DMLV" />

                    <TextView
                        android:id="@+id/tvSambatastatic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DMSaturday" />

                    <TextView
                        android:id="@+id/tvDuminicastatic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/DMSunday" />
                </LinearLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/btnDuma"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textSize="0sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.30">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ibLike"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:src="@drawable/like" />

    <ImageButton
        android:id="@+id/ibUnlike"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/ibLike"
        android:background="@null"
        android:src="@drawable/unlike" />


</RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlNavBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/primary_blue">

        <TextView
            android:id="@+id/tvNumeDM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:text="@string/DMsepopuleaza"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:src="@drawable/back_selector" />
    </RelativeLayout>


</RelativeLayout>